# GameLearn

./: CMakeLists.txt
res/resJSON/: checkRes.json  resources.json
res/shaders/: fSprite.txt  fragment.txt  vSprite.txt  vertex.txt
src/: main.cpp
src/GameClass/: GameObject.cpp  GameObject.h  MainGameClass.cpp  MainGameClass.h  StateController.cpp  StateController.h
src/Renderer/: AnimSprite.cpp  AnimSprite.h  IndexBuffer.cpp  IndexBuffer.h  RenderEngine.cpp  RenderEngine.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  StateAnimation.cpp  StateAnimation.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
